; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libusbhid/extr_parse.c_hid_locate.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libusbhid/extr_parse.c_hid_locate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i64 }
%struct.hid_data = type { i32 }

@HIO_CONST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hid_locate(i32 %0, i32 %1, i32 %2, %struct.TYPE_4__* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.hid_data*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %9, align 4
  %15 = shl i32 1, %14
  %16 = load i32, i32* %11, align 4
  %17 = call %struct.hid_data* @hid_start_parse(i32 %13, i32 %15, i32 %16)
  store %struct.hid_data* %17, %struct.hid_data** %12, align 8
  br label %18

18:                                               ; preds = %45, %5
  %19 = load %struct.hid_data*, %struct.hid_data** %12, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %21 = call i64 @hid_get_item(%struct.hid_data* %19, %struct.TYPE_4__* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %46

23:                                               ; preds = %18
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load i32, i32* %9, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %45

29:                                               ; preds = %23
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @HIO_CONST, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %45, label %36

36:                                               ; preds = %29
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* %8, align 4
  %41 = icmp eq i32 %39, %40
  br i1 %41, label %42, label %45

42:                                               ; preds = %36
  %43 = load %struct.hid_data*, %struct.hid_data** %12, align 8
  %44 = call i32 @hid_end_parse(%struct.hid_data* %43)
  store i32 1, i32* %6, align 4
  br label %51

45:                                               ; preds = %36, %29, %23
  br label %18

46:                                               ; preds = %18
  %47 = load %struct.hid_data*, %struct.hid_data** %12, align 8
  %48 = call i32 @hid_end_parse(%struct.hid_data* %47)
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %49, i32 0, i32 3
  store i64 0, i64* %50, align 8
  store i32 0, i32* %6, align 4
  br label %51

51:                                               ; preds = %46, %42
  %52 = load i32, i32* %6, align 4
  ret i32 %52
}

declare dso_local %struct.hid_data* @hid_start_parse(i32, i32, i32) #1

declare dso_local i64 @hid_get_item(%struct.hid_data*, %struct.TYPE_4__*) #1

declare dso_local i32 @hid_end_parse(%struct.hid_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
